compiler/tests/fixtures/negative/error_sema_tilde.sol
// E1013: bitwise invert (~) requires an integer.
function start() -> float {
    return ~1.5;
}
